# sugv

./: README.md
sugv_control/: CMakeLists.txt  package.xml
sugv_control/config/: control.yaml
sugv_control/launch/: control.launch
sugv_description/: CMakeLists.txt  package.xml
sugv_description/launch/: description.launch
sugv_description/urdf/: sugv.xacro
sugv_gazebo/: CMakeLists.txt  package.xml
sugv_gazebo/launch/: empty_world.launch  spawn_sugv.launch
sugv_gazebo/worlds/: willow.world
sugv_navigation/: CMakeLists.txt  package.xml
sugv_navigation/config/: amcl.yaml  costmap_common.yaml  global_costmap.yaml  gmapping.yaml  hector_costmap.yaml  hector_mapping.yaml  local_costmap.yaml
sugv_navigation/launch/: gmapping.launch  mapping.launch  nav.launch
sugv_navigation/rviz/: navigation.rviz
