<?xml version="1.0"?>
<package format="2">
  <name>sugv_description</name>
  <version>0.0.1</version>
  <description>The sugv_description package</description>

  <maintainer email="hannu.2.henttinen@samk.fi">Hannu Henttinen</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com/gurnarok/sugv</url>
  <url type="repository">https://github.com/gurnarok/sugv.git</url>
  <url type="bugtracker">https://github.com/gurnarok/sugv/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>robot_state_publisher</depend>
  <depend>urdf</depend>
  <exec_depend>joint_state_publisher</exec_depend>

</package>
