<?xml version="1.0"?>
<package format="2">
  <name>sugv_navigation</name>
  <version>0.0.1</version>
  <description>The sugv_navigation package</description>

  <maintainer email="hannu.2.henttinen@samk.fi">Hannu Henttinen</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com/gurnarok/sugv</url>
  <url type="repository">https://github.com/gurnarok/sugv.git</url>
  <url type="bugtracker">https://github.com/gurnarok/sugv/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>navfn</exec_depend>

</package>
